# sfp_uploader

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/sfp_uploader/: __init__.py  __main__.py  main.py  test_upload.py
