[project]
name = "sfp-uploader"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "OhkuboSGMS", email = "ginger.os777146th@gmail.com" }
]
dependencies = [
    "playwright>=1.41.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "sfp_uploader:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/sfp_uploader"]
