[project]
name = "sfp-uploader"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "OhkuboSGMS", email = "ginger.os777146th@gmail.com" }
]
dependencies = [
    "playwright>=1.41.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
test_upload = "sfp_uploader.test_upload:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pydub>=0.25.1",
    "python-dotenv>=1.0.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/sfp_uploader"]
